build: JAVA 11 버전으로 맞추고 INFRA.md 대로 배포 가능하게 수정.